[Bug #19231] Make infinite end ArithmeticSequence same as endless