enumerator.c
@@ -3890,6 +3890,16 @@ rb_arithmetic_sequence_beg_len_step(VALUE obj, long *begp, long *lenp, long *ste
     return Qnil;
 }
 
+static bool
+infinite_end_p(VALUE e)
+{
+    if (NIL_P(e)) return true;
+    if (RB_FLOAT_TYPE_P(e)) {
+        return isinf(NUM2DBL(e));
+    }
+    return false;
+}
+
 /*
  * call-seq:
  *   aseq.first -> num or nil
@@ -3939,7 +3949,7 @@ arith_seq_first(int argc, VALUE *argv, VALUE self)
 
     x = arith_seq_exclude_end_p(self);
 
-    if (FIXNUM_P(b) && NIL_P(e) && FIXNUM_P(s)) {
+    if (FIXNUM_P(b) && infinite_end_p(e) && FIXNUM_P(s)) {
         long i = FIX2LONG(b), unit = FIX2LONG(s);
         ary = rb_ary_new_capa(n);
         while (n > 0 && FIXABLE(i)) {
